# cellex-rs

./: .gitignore  .gitmodules  .mcp.json  .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  GITHUB_ACTIONS_FIX.md  Makefile.toml  PROJECT_STATUS.md  README.ja.md  README.md  memo.txt  progress.md  sonar-project.properties
modules/actor-core/: Cargo.toml  clippy.toml
modules/actor-core/benches/: failure_telemetry.rs  mailbox_throughput.rs  metadata_table.rs  ready_queue_coordinator.rs  scheduler_latency.rs
modules/actor-core/docs/: actor_context_refactor_plan.md  api_inventory.md
modules/actor-core/src/: api.rs  extensions.rs  internal.rs  lib.rs  new_runtime.rs  runtime.rs  shared.rs  tests.rs
modules/actor-core/src/api/: actor.rs  actor_runtime.rs  actor_scheduler.rs  actor_system.rs  event_stream.rs  extensions.rs  failure.rs  failure_event_stream.rs  failure_telemetry.rs  guardian.rs  mailbox.rs  mailbox_runtime.rs  messaging.rs  metrics.rs  process.rs  queue_mailbox.rs  receive_timeout.rs  scheduler.rs  shared.rs  supervision.rs  test_support.rs
modules/actor-core/src/extensions/: tests.rs
modules/actor-core/src/internal/: actor.rs  actor_context.rs  actor_system.rs  context.rs  failure.rs  guardian.rs  mailbox.rs  message.rs  metrics.rs  runtime_state.rs  scheduler.rs  supervision.rs  system.rs  traits.rs
modules/actor-core/src/new_runtime/: actor_system.rs  bundle.rs  mailbox.rs  runtime_parts.rs  scheduler.rs  test_harness.rs
modules/actor-core/src/runtime/: context.rs  mailbox.rs  metrics.rs  scheduler.rs  traits.rs
modules/actor-core/src/shared/: actor.rs  failure_telemetry.rs  mailbox.rs  map_system.rs  messaging.rs  receive_timeout.rs  supervision.rs
modules/actor-core/src/tests/: legacy_queue_v1.rs
modules/actor-embedded/: Cargo.toml
modules/actor-embedded/examples/: embassy_multi_worker.rs  embassy_run_forever.rs  rp2040_basic.rs  rp2040_behaviors_greeter.rs  rp2350_arc.rs  rp2350_behaviors_greeter.rs
modules/actor-embedded/src/: arc_mailbox.rs  arc_priority_mailbox.rs  default_mailbox.rs  default_priority_mailbox.rs  embassy_dispatcher.rs  lib.rs  local_mailbox.rs  new_runtime.rs  receive_timeout.rs  runtime_driver.rs  scheduler.rs  spawn.rs  tests.rs  timer.rs
modules/actor-embedded/src/arc_mailbox/: arc_mailbox_impl.rs  factory.rs  runtime.rs  sender.rs  signal.rs  signal_wait.rs  sync_queue_handle.rs
modules/actor-embedded/src/arc_priority_mailbox/: factory.rs  mailbox.rs  priority_mailbox_queue_handle.rs  priority_sync_driver.rs  priority_sync_handle.rs  queues.rs  runtime.rs  sender.rs  tests.rs
modules/actor-embedded/src/default_mailbox/: default_mailbox_impl.rs  factory.rs  sender.rs  signal.rs  signal_wait.rs
modules/actor-embedded/src/default_priority_mailbox/: factory.rs  mailbox.rs  priority_mailbox_queue.rs  sender.rs  tests.rs
modules/actor-embedded/src/local_mailbox/: local_mailbox_factory.rs  local_mailbox_runtime.rs  local_mailbox_sender.rs  local_mailbox_type.rs  local_queue.rs  local_signal.rs  local_signal_wait.rs  shared.rs  tests.rs
modules/actor-embedded/src/new_runtime/: embedded.rs
modules/actor-embedded/src/receive_timeout/: factory.rs  internal.rs  scheduler.rs
modules/actor-embedded/src/runtime_driver/: embedded_failure_event_hub.rs  embedded_failure_event_subscription.rs  shared.rs
modules/actor-embedded/src/scheduler/: embassy_scheduler_impl.rs  runtime_ext.rs
modules/actor-embedded/src/spawn/: tests.rs
modules/actor-embedded/src/timer/: tests.rs
modules/actor-embedded/tests/: runtime_driver.rs
modules/actor-std/: Cargo.toml
modules/actor-std/examples/: behaviors_greeter.rs  tokio_multi_worker.rs  tokio_run_forever.rs
modules/actor-std/src/: failure_event_bridge.rs  failure_event_hub.rs  lib.rs  new_runtime.rs  receive_timeout.rs  runtime_driver.rs  scheduler.rs  spawn.rs  tests.rs  timer.rs  tokio_mailbox.rs  tokio_priority_mailbox.rs
modules/actor-std/src/failure_event_hub/: failure_event_hub_impl.rs  failure_event_hub_inner.rs  failure_event_subscription.rs  tests.rs
modules/actor-std/src/new_runtime/: host_tokio.rs
modules/actor-std/src/receive_timeout/: shared.rs  tokio_receive_timeout_driver.rs  tokio_receive_timeout_scheduler.rs  tokio_receive_timeout_scheduler_factory.rs
modules/actor-std/src/scheduler/: tokio_actor_runtime_ext.rs  tokio_scheduler.rs
modules/actor-std/src/tokio_mailbox/: notify_signal.rs  tests.rs  tokio_mailbox_factory.rs  tokio_mailbox_impl.rs  tokio_mailbox_runtime.rs  tokio_mailbox_sender.rs  tokio_queue.rs
modules/actor-std/src/tokio_priority_mailbox/: factory.rs  mailbox.rs  priority_mailbox_queue.rs  priority_sync_driver.rs  queues.rs  runtime.rs  sender.rs  tests.rs
modules/actor-std/tests/: async_queue_migration.rs  runtime_driver.rs
modules/cluster-core/: Cargo.toml
modules/cluster-core/src/: lib.rs  tests.rs
modules/remote-core/: Cargo.toml
modules/remote-core/src/: codec.rs  lib.rs  remote_envelope.rs  tests.rs
modules/remote-core/src/codec/: remote_message_frame.rs  remote_payload_frame.rs
modules/serialization-core/: Cargo.toml
modules/serialization-core/src/: error.rs  json.rs  lib.rs  message.rs  registry.rs  routing.rs  serializer.rs  type_key.rs
modules/serialization-core/src/error/: deserialization_error.rs  registry_error.rs  serialization_error.rs
modules/serialization-core/src/message/: message_header.rs  serialized_message.rs
modules/serialization-json/: Cargo.toml
modules/serialization-json/src/: json_type_key.rs  lib.rs
modules/serialization-postcard/: Cargo.toml
modules/serialization-postcard/src/: lib.rs  postcard_type_key.rs
modules/utils-core/: Cargo.toml  clippy.toml
modules/utils-core/benches/: ring_queue_shared.rs  stack_compare.rs
modules/utils-core/src/: collections.rs  concurrent.rs  lib.rs  sync.rs  timing.rs
modules/utils-embedded/: Cargo.toml  clippy.toml
modules/utils-embedded/src/: collections.rs  concurrent.rs  lib.rs  sync.rs  tests.rs  v2.rs
modules/utils-std/: Cargo.toml
modules/utils-std/src/: collections.rs  concurrent.rs  lib.rs  sync.rs  timing.rs  v2.rs
(+994 files in other folders)
