[workspace]
resolver = "2"
members = [
  "modules/utils-core",
  "modules/utils-std",
  "modules/utils-embedded",
  "modules/actor-core",
  "modules/actor-std",
  "modules/actor-embedded",
  "modules/remote-core",
  "modules/cluster-core",
  "modules/serialization-core",
  "modules/serialization-json",
  "modules/serialization-prost",
  "modules/serialization-postcard",
  "platform-tests/rp2040-hw-tests",
  "platform-tests/rp2350-hw-tests",
  "platform-tests/wio-terminal-hw-tests"
]

[workspace.dependencies]
async-trait = { version = "0.1.89", default-features = false }
dashmap = "7.0.0-rc2"
futures = "0.3.31"
num_enum = "0.7.4"
once_cell = "1.21.3"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
static_assertions = "1.1.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", default-features = false }
tokio-util = { version = "0.7.16" }
tonic = "0.14.2"
tonic-types = "0.14.2"
tracing = "0.1.41"
regex = "1.12.2"
parking_lot = "0.12.5"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
