[package]
name = "cellex-actor-core-rs"
version = "0.0.1"
edition = "2021"
description = "Foundation for Cellex Actor (no_std skeleton)"
license = "MIT OR Apache-2.0"
keywords = ["actors", "actor-model"]
categories = ["concurrency"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/cellex-rs"

[features]
default = ["alloc"]
alloc = []
std = [
  "alloc",
  "tracing",
  "futures/std",
  "futures/executor",
  "dep:cellex-serialization-json-rs",
  "dep:cellex-serialization-prost-rs",
  "dep:tokio",
]
postcard = ["dep:cellex-serialization-postcard-rs"]
test-support = []

[dependencies]
async-trait = { workspace = true }
cellex-serialization-core-rs = { path = "../serialization-core", default-features = false, features = ["alloc"] }
cellex-serialization-json-rs = { path = "../serialization-json", optional = true }
cellex-serialization-postcard-rs = { path = "../serialization-postcard", optional = true }
cellex-serialization-prost-rs = { path = "../serialization-prost", optional = true }
cellex-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }
critical-section = { workspace = true, default-features = false }
futures = { workspace = true, features = ["alloc"] }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "once", "portable_atomic", "rwlock"] }
tokio = { workspace = true, optional = true, default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "signal"] }
tracing = { workspace = true, features = ["std"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[[bench]]
name = "metadata_table"
harness = false
required-features = ["std"]
