[package]
name = "cellex-actor-core-rs"
version = "0.0.1"
edition = "2021"
description = "Foundation for Cellex Actor (no_std skeleton)"
license = "MIT OR Apache-2.0"
keywords = ["actors", "actor-model"]
categories = ["concurrency"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/cellex-rs"

[features]
default = ["alloc"]
alloc = []
std = [
  "alloc",
  "tracing",
  "futures/std",
  "futures/executor",
  "dep:cellex-serialization-json-rs",
  "dep:cellex-serialization-prost-rs",
  "dep:cellex-utils-std-rs",
  "dep:tokio",
]
unwind-supervision = ["std"]
postcard = ["dep:cellex-serialization-postcard-rs"]
test-support = []
# Phase 0-4: ActorScheduler refactoring prototype
new-scheduler = ["std", "dep:dashmap", "dep:crossbeam-queue"]

[dependencies]
async-trait = { workspace = true }
cellex-serialization-core-rs = { path = "../serialization-core", default-features = false, features = ["alloc"] }
cellex-serialization-json-rs = { path = "../serialization-json", optional = true }
cellex-serialization-postcard-rs = { path = "../serialization-postcard", optional = true }
cellex-serialization-prost-rs = { path = "../serialization-prost", optional = true }
cellex-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }
cellex-utils-std-rs = { path = "../utils-std", optional = true }
critical-section = { workspace = true, default-features = false }
crossbeam-queue = { version = "0.3", optional = true }
dashmap = { version = "6.0", optional = true }
futures = { workspace = true, default-features = false, features = ["alloc"] }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "once", "portable_atomic", "rwlock"] }
tokio = { workspace = true, optional = true, default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "signal"] }
tracing = { workspace = true, features = ["std"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[[bench]]
name = "metadata_table"
harness = false
required-features = ["std"]

[[bench]]
name = "failure_telemetry"
harness = false
required-features = ["std"]

[[bench]]
name = "mailbox_throughput"
harness = false
required-features = ["std"]

[[bench]]
name = "scheduler_latency"
harness = false
required-features = ["std"]
