[package]
name = "cellex-actor-core-rs"
version = "0.0.1"
edition = "2021"
description = "Foundation for Cellex Actor (no_std skeleton)"
license = "MIT OR Apache-2.0"
keywords = ["actors", "actor-model"]
categories = ["concurrency"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/cellex-rs"

[features]
default = ["alloc", "queue-v2"]
alloc = []
queue-v1 = ["cellex-utils-core-rs/queue-v1"]
queue-v2 = ["cellex-utils-core-rs/queue-v2"]
tracing-support = ["tracing"]
json = ["dep:cellex-serialization-json-rs"]
prost = ["dep:cellex-serialization-prost-rs"]
unwind-supervision = ["tracing-support"]
postcard = ["dep:cellex-serialization-postcard-rs"]
test-support = []

# 便利な組み合わせフィーチャー
full = ["alloc", "tracing-support", "json", "prost"]

[dependencies]
async-trait = { workspace = true }
cellex-serialization-core-rs = { path = "../serialization-core", default-features = false, features = ["alloc"] }
cellex-serialization-json-rs = { path = "../serialization-json", optional = true }
cellex-serialization-postcard-rs = { path = "../serialization-postcard", optional = true }
cellex-serialization-prost-rs = { path = "../serialization-prost", optional = true }
cellex-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }
critical-section = { workspace = true, default-features = false }
futures = { workspace = true, default-features = false, features = ["alloc"] }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "once", "portable_atomic", "rwlock"] }
tracing = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true, features = ["std", "executor"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[[bench]]
name = "metadata_table"
harness = false
required-features = ["full"]

[[bench]]
name = "failure_telemetry"
harness = false
required-features = ["full"]

[[bench]]
name = "mailbox_throughput"
harness = false
required-features = ["full"]

[[bench]]
name = "scheduler_latency"
harness = false
required-features = ["full"]

[[bench]]
name = "ready_queue_coordinator"
harness = false
required-features = ["full"]
