[package]
name = "cellex-actor-embedded-rs"
version = "0.0.1"
edition = "2021"
description = "Rc-based runtime adapters for bare-metal targets"
license = "MIT OR Apache-2.0"
keywords = ["actors", "embedded"]
categories = ["concurrency", "embedded"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/cellex-rs"

[features]
default = ["alloc", "embedded_rc", "rp2040-board"]
alloc = []
embedded_rc = ["cellex-utils-embedded-rs/rc"]
embedded_arc = ["cellex-utils-embedded-rs/arc", "dep:embassy-sync"]
embassy_executor = ["dep:embassy-executor", "dep:embassy-futures", "dep:embassy-time", "dep:embassy-sync"]
rp2040-board = ["dep:rp2040-hal", "dep:rp2040-boot2"]
rp2350-board = ["dep:rp235x-hal"]

[dependencies]
cellex-actor-core-rs = { path = "../actor-core", default-features = false, features = ["alloc"] }
cellex-utils-embedded-rs = { path = "../utils-embedded", default-features = false }
cellex-utils-core-rs = { path = "../utils-core", default-features = false }
critical-section = { workspace = true, default-features = false }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "portable_atomic"] }
async-trait = { workspace = true }
alloc-cortex-m = { workspace = true, optional = true }
cortex-m = { workspace = true, optional = true }
cortex-m-rt = { workspace = true, optional = true }
panic-halt = { workspace = true, optional = true }
rp2040-hal = { workspace = true, default-features = false, features = ["critical-section-impl"], optional = true }
embedded-hal = { workspace = true, optional = true }
embassy-sync = { workspace = true, default-features = false, optional = true }
embassy-executor = { workspace = true, default-features = false, optional = true }
embassy-futures = { workspace = true, default-features = false, optional = true }
embassy-time = { workspace = true, default-features = false, optional = true }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }

[dev-dependencies]
critical-section = { workspace = true }
static_cell = { workspace = true }

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
futures = { workspace = true, features = ["std"] }

[target.'cfg(target_os = "none")'.dependencies]
alloc-cortex-m = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true, features = ["device"] }
panic-halt = { workspace = true }
embedded-hal = { workspace = true }
rp2040-boot2 = { workspace = true, optional = true }
rp2040-hal = { workspace = true, default-features = false, features = ["critical-section-impl"], optional = true }
rp235x-hal = { workspace = true, default-features = false, features = ["critical-section-impl"], optional = true }

[[example]]
name = "rp2350_arc"
required-features = ["embedded_arc"]

[[example]]
name = "rp2350_behaviors_greeter"
required-features = ["embedded_arc", "rp2350-board"]
