[package]
name = "cellex-actor-std-rs"
version = "0.0.1"
edition = "2021"
description = "Tokio-based runtime adapters for Cellex"
license = "MIT OR Apache-2.0"
keywords = ["actors", "tokio", "runtime"]
categories = ["concurrency", "asynchronous"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/cellex-rs"

[features]
default = ["rt-multi-thread"]
rt-multi-thread = ["tokio/rt-multi-thread"]
rt-current-thread = ["tokio/rt"]
new-runtime = ["cellex-actor-core-rs/new-runtime"]

[dependencies]
cellex-actor-core-rs = { path = "../actor-core", default-features = false, features = ["alloc", "std"] }
cellex-utils-std-rs = { path = "../utils-std" }
cellex-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }
futures = "0.3"
async-trait = { workspace = true }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "sync", "time", "signal"] }

[dev-dependencies]
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
