[package]
name = "cellex-cluster-core-rs"
version = "0.0.1"
edition = "2021"
description = "Cluster coordination scaffolding"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
alloc = []
std = ["alloc", "cellex-actor-core-rs/std", "cellex-remote-core-rs/std"]

[dependencies]
cellex-actor-core-rs = { path = "../actor-core", default-features = false, features = ["alloc", "test-support"] }
cellex-remote-core-rs = { path = "../remote-core", default-features = false, features = ["alloc"] }

[dev-dependencies]
cellex-actor-std-rs = { path = "../actor-std" }
cellex-serialization-core-rs = { path = "../serialization-core" }
cellex-serialization-json-rs = { path = "../serialization-json" }
serde = { workspace = true }
serde_json = { workspace = true }
