[package]
name = "cellex-remote-core-rs"
version = "0.0.1"
edition = "2021"
description = "Remote messaging core scaffolding"
license = "MIT OR Apache-2.0"

[features]
default = ["alloc"]
alloc = []

[dependencies]
cellex-actor-core-rs = { path = "../actor-core", default-features = false, features = ["alloc", "test-support"] }
cellex-serialization-core-rs = { path = "../serialization-core", default-features = false, features = ["alloc"] }
thiserror = { workspace = true }

[dev-dependencies]
cellex-actor-std-rs = { path = "../actor-std" }
cellex-serialization-json-rs = { path = "../serialization-json" }
serde = { workspace = true }
serde_json = { workspace = true }
