[package]
name = "cellex-serialization-core-rs"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core serialization abstractions shared across Cellex Actor modules"
publish = false

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]

[dependencies]
cellex-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }
spin = { version = "0.10", default-features = false, features = ["rwlock"] }
