[package]
name = "cellex-serialization-postcard-rs"
version = "0.0.1"
edition = "2021"
description = "postcard-backed serializer implementation for Cellex"
license = "MIT OR Apache-2.0"
repository = "https://github.com/j5ik2o/cellex-rs"
readme = "../../README.md"

[features]
default = ["alloc"]
alloc = []

[dependencies]
cellex-serialization-core-rs = { path = "../serialization-core", default-features = false, features = ["alloc"] }
cellex-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }
postcard = { workspace = true, default-features = false, features = ["alloc"] }
serde = { workspace = true }
