[package]
name = "cellex-utils-core-rs"
version = "0.0.1"
edition = "2021"
description = "no_std friendly utilities for Cellex Actor"
license = "MIT OR Apache-2.0"
keywords = ["cellex", "actor", "utils", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/cellex-rs"
readme = "../../README.md"

[features]
default = ["alloc"]
alloc = []

[dependencies]
async-trait = { workspace = true }
critical-section = { workspace = true, optional = false }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock"] }
