[package]
name = "cellex-utils-core-rs"
version = "0.0.1"
edition = "2021"
description = "no_std friendly utilities for Cellex Actor"
license = "MIT OR Apache-2.0"
keywords = ["cellex", "actor", "utils", "no_std"]
categories = ["concurrency", "embedded", "no-std"]
repository = "https://github.com/j5ik2o/cellex-rs"
readme = "../../README.md"

[features]
default = ["alloc", "queue-v2"]
alloc = []
queue-v1 = []
queue-v2 = []
interrupt-cortex-m = ["cortex-m"]

[dependencies]
async-trait = { workspace = true }
critical-section = { workspace = true, optional = false }
spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable_atomic"] }
portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
cortex-m = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ring_queue_shared"
harness = false

[[bench]]
name = "stack_compare"
harness = false
