[package]
name = "cellex-utils-embedded-rs"
version = "0.0.1"
edition = "2021"
description = "Embassy-oriented async primitives for Cellex"
license = "MIT OR Apache-2.0"
keywords = ["async", "embedded", "mutex"]
categories = ["concurrency", "embedded"]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/cellex-rs"

[features]
default = ["rc"]
rc = ["dep:embassy-sync"]
arc = ["dep:embassy-sync", "dep:critical-section"]
std = []
embassy = ["arc", "dep:embassy-time", "dep:embassy-futures"]

[dependencies]
embassy-sync = { workspace = true, default-features = false, optional = true }
embassy-time = { workspace = true, default-features = false, optional = true }
critical-section = { workspace = true, optional = true }
embassy-futures = { workspace = true, default-features = false, optional = true }
cellex-utils-core-rs = { path = "../utils-core", default-features = false, features = ["alloc"] }

[dev-dependencies]
static_assertions = { workspace = true }

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
futures = { workspace = true, features = ["alloc", "executor", "std", "async-await"] }
