[package]
name = "cellex-utils-std-rs"
version = "0.0.1"
edition = "2021"
description = "Utility library for Cellex Actor"
license = "MIT OR Apache-2.0"
keywords = [ "cellex", "actor", "utils" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/cellex-rs"

[dependencies]
async-trait = { workspace = true }
cellex-actor-core-rs = { version = "0.0.1", path = "../actor-core", default-features = false, features = ["alloc"] }
cellex-utils-core-rs = { version = "0.0.1", path = "../utils-core", features = ["std"] }
dashmap = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "signal"] }
tokio-condvar = "0.3.0"
tokio-util = { workspace = true, features = ["time"] }
tracing = { workspace = true }
