[package]
name = "cellex-utils-std-rs"
version = "0.0.1"
edition = "2021"
description = "Utility library for Cellex Actor"
license = "MIT OR Apache-2.0"
keywords = [ "cellex", "actor", "utils" ]
categories = [ "concurrency", "asynchronous", "network-programming" ]
readme = "../../README.md"
repository = "https://github.com/j5ik2o/cellex-rs"

[dependencies]
async-trait = { workspace = true }
cellex-utils-core-rs = { path = "../utils-core", features = ["std"] }
futures = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "signal"] }
tokio-util = { workspace = true, features = ["time"] }
